--- a/index.html
+++ b/index.html
@@ -93,120 +93,7 @@
         </div>
         <div class="produtos">
             <ul class="lista-produtos">
-                <li class="item-produto">
-                    <div class="borda">
-                        <a class="produto" href="#">
-                            <img src="https://media.playstation.com/is/image/SCEA/playstation-4-slim-vertical-product-shot-01-us-07sep16?$native_md_t$" alt="imagem-produto"></a>
-                        <div class="produto-info">
-                            <h4>Nome do produto</h4>
-                            <p>Descrição do produto um pouco maior, com duas linhas ou três que explica melhor do que se trata.</p>
-                            <p>De: R$23,99</p>
-                            <p style="font-weight: bold; font-size: 15px">Por: R$19,99</p>
-                            <p>ou 2x de R$9,99</p>
-                            <button type="button" class="botao-produto" href="#">Comprar</button>
-                        </div>
-                    </div>
-                </li>
-                <li class="item-produto">
-                    <div class="borda">
-                        <a class="produto" href="#">
-                            <img src="https://media.playstation.com/is/image/SCEA/playstation-4-slim-vertical-product-shot-01-us-07sep16?$native_md_t$" alt="imagem-produto"></a>
-                        <div class="produto-info">
-                            <h4>Nome do produto</h4>
-                            <p>Descrição do produto um pouco maior, com duas linhas ou três que explica melhor do que se trata.</p>
-                            <p>De: R$23,99</p>
-                            <p style="font-weight: bold; font-size: 15px">Por: R$19,99</p>
-                            <p>ou 2x de R$9,99</p>
-                            <button type="button" class="botao-produto" href="#">Comprar</button>
-                        </div>
-                    </div>
-                </li>
-                <li class="item-produto">
-                    <div class="borda">
-                        <a class="produto" href="#">
-                            <img src="https://media.playstation.com/is/image/SCEA/playstation-4-slim-vertical-product-shot-01-us-07sep16?$native_md_t$" alt="imagem-produto"></a>
-                        <div class="produto-info">
-                            <h4>Nome do produto</h4>
-                            <p>Descrição do produto um pouco maior, com duas linhas ou três que explica melhor do que se trata.</p>
-                            <p>De: R$23,99</p>
-                            <p style="font-weight: bold; font-size: 15px">Por: R$19,99</p>
-                            <p>ou 2x de R$9,99</p>
-                            <button type="button" class="botao-produto" href="#">Comprar</button>
-                        </div>
-                    </div>
-                </li>
-                <li class="item-produto">
-                    <div class="borda">
-                        <a class="produto" href="#">
-                            <img src="https://media.playstation.com/is/image/SCEA/playstation-4-slim-vertical-product-shot-01-us-07sep16?$native_md_t$" alt="imagem-produto"></a>
-                        <div class="produto-info">
-                            <h4>Nome do produto</h4>
-                            <p>Descrição do produto um pouco maior, com duas linhas ou três que explica melhor do que se trata.</p>
-                            <p>De: R$23,99</p>
-                            <p style="font-weight: bold; font-size: 15px">Por: R$19,99</p>
-                            <p>ou 2x de R$9,99</p>
-                            <button type="button" class="botao-produto" href="#">Comprar</button>
-                        </div>
-                    </div>
-                </li>
-                <li class="item-produto">
-                    <div class="borda">
-                        <a class="produto" href="#">
-                            <img src="https://media.playstation.com/is/image/SCEA/playstation-4-slim-vertical-product-shot-01-us-07sep16?$native_md_t$" alt="imagem-produto"></a>
-                        <div class="produto-info">
-                            <h4>Nome do produto</h4>
-                            <p>Descrição do produto um pouco maior, com duas linhas ou três que explica melhor do que se trata.</p>
-                            <p>De: R$23,99</p>
-                            <p style="font-weight: bold; font-size: 15px">Por: R$19,99</p>
-                            <p>ou 2x de R$9,99</p>
-                            <button type="button" class="botao-produto" href="#">Comprar</button>
-                        </div>
-                    </div>
-                </li>
-                <li class="item-produto">
-                    <div class="borda">
-                        <a class="produto" href="#">
-                            <img src="https://media.playstation.com/is/image/SCEA/playstation-4-slim-vertical-product-shot-01-us-07sep16?$native_md_t$" alt="imagem-produto"></a>
-                        <div class="produto-info">
-                            <h4>Nome do produto</h4>
-                            <p>Descrição do produto um pouco maior, com duas linhas ou três que explica melhor do que se trata.</p>
-                            <p>De: R$23,99</p>
-                            <p style="font-weight: bold; font-size: 15px">Por: R$19,99</p>
-                            <p>ou 2x de R$9,99</p>
-                            <button type="button" class="botao-produto" href="#">Comprar</button>
-                        </div>
-                    </div>
-                </li>
-                <li class="item-produto">
-                    <div class="borda">
-                        <a class="produto" href="#">
-                            <img src="https://media.playstation.com/is/image/SCEA/playstation-4-slim-vertical-product-shot-01-us-07sep16?$native_md_t$" alt="imagem-produto"></a>
-                        <div class="produto-info">
-                            <h4>Nome do produto</h4>
-                            <p>Descrição do produto um pouco maior, com duas linhas ou três que explica melhor do que se trata.</p>
-                            <p>De: R$23,99</p>
-                            <p style="font-weight: bold; font-size: 15px">Por: R$19,99</p>
-                            <p>ou 2x de R$9,99</p>
-                            <button type="button" class="botao-produto" href="#">Comprar</button>
-                        </div>
-                    </div>
-                </li>
-                <li class="item-produto">
-                    <div class="borda">
-                        <div class="imagem-produto">
-                        <a class="produto" href="#">
-                            <img src="https://media.playstation.com/is/image/SCEA/playstation-4-slim-vertical-product-shot-01-us-07sep16?$native_md_t$" alt="imagem-produto"></a>
-                        </div>
-                            <div class="produto-info">
-                            <h4>Nome do produto</h4>
-                            <p>Descrição do produto um pouco maior, com duas linhas ou três que explica melhor do que se trata.</p>
-                            <p>De: R$23,99</p>
-                            <p style="font-weight: bold; font-size: 15px">Por: R$19,99</p>
-                            <p>ou 2x de R$9,99</p>
-                            <button type="button" class="botao-produto" href="#">Comprar</button>
-                        </div>
-                    </div>
-                </li>
+                <div id="id01"></div>
             </ul>
         </div>
         <div class="botao-mais">
@@ -257,8 +144,37 @@
         </div>
     </div>
 
-
 </footer>
+
+<script>
+    function myFunction(arr) {
+        var out = "";
+        var i;
+        for(i = 0; i<arr.length; i++) {
+            split = arr[i].price.split('$');
+            console.log(split);
+            var vezes = split[1]/2;
+            out += '<li class="item-produto"> ' +
+                    '<div class="borda">' +
+                    ' <a class="produto" href="#">' +
+                    '<img src="' + arr[i].picture + '" alt="imagem-produto"></a>'+
+                    '<div class="produto-info">' +
+                    '<h4>'+ arr[i].name+'</h4>'+
+                    '<p>'+ arr[i].description +'</p>' +
+                    '<p>De: '+ arr[i].oldPrice + '</p>' +
+                    '<p style="font-weight: bold; font-size: 15px">Por: ' + arr[i].price + '</p>' +
+                    '<p>ou 2x de $'+ vezes +'</p>' +
+                    '<button type="button" class="botao-produto" href="#">Comprar</button>' +
+                    '</div> </div> </li>'
+
+
+        }
+        document.getElementById("id01").innerHTML = out;
+    }
+</script>
+
+<script type="text/javascript"  src="javascript/javascript.js"></script>
+
 
 </body>
 
