--- a/index.html
+++ b/index.html
@@ -156,8 +156,10 @@
             var vezes = split[1]/2;
             out += '<li class="item-produto"> ' +
                     '<div class="borda">' +
+                    '<div class="imagemproduto">'+
                     ' <a class="produto" href="#">' +
                     '<img src="' + arr[i].picture + '" alt="imagem-produto"></a>'+
+                    '</div>' +
                     '<div class="produto-info">' +
                     '<h4>'+ arr[i].name+'</h4>'+
                     '<p>'+ arr[i].description +'</p>' +
