--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <header>
     <div class="trap-container">
         <svg width="100%" height="100%" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none">
-            <polygon points="0,0 100,0 100,100 0,70" fill="#707070">
+            <polygon points="0,0 100,0 100,100 0,70" fill="#562668">
             </polygon>
         </svg>
         <div class="trap-content">
@@ -132,7 +132,7 @@
 <footer class="footer">
     <div class="trap-container">
         <svg width="100%" height="100%" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none">
-            <polygon points="0,50, 100,0 100,100 0,100" fill="#707070">
+            <polygon points="0,50, 100,0 100,100 0,100" fill="#562668">
             </polygon>
         </svg>
         <div class="trap-content-final">
@@ -146,35 +146,9 @@
 
 </footer>
 
-<script>
-    function myFunction(arr) {
-        var out = "";
-        var i;
-        for(i = 0; i<arr.length; i++) {
-            split = arr[i].price.split('$');
-            console.log(split);
-            var vezes = split[1]/2;
-            out += '<li class="item-produto"> ' +
-                    '<div class="borda">' +
-                    '<div class="imagemproduto">'+
-                    ' <a class="produto" href="#">' +
-                    '<img src="' + arr[i].picture + '" alt="imagem-produto"></a>'+
-                    '</div>' +
-                    '<div class="produto-info">' +
-                    '<h4>'+ arr[i].name+'</h4>'+
-                    '<p>'+ arr[i].description +'</p>' +
-                    '<p>De: '+ arr[i].oldPrice + '</p>' +
-                    '<p style="font-weight: bold; font-size: 15px">Por: ' + arr[i].price + '</p>' +
-                    '<p>ou 2x de $'+ vezes +'</p>' +
-                    '<button type="button" class="botao-produto" href="#">Comprar</button>' +
-                    '</div> </div> </li>'
 
 
-        }
-        document.getElementById("id01").innerHTML = out;
-    }
-</script>
-
+<script type="text/javascript"  src="javascript/produtos.js"></script>
 <script type="text/javascript"  src="javascript/javascript.js"></script>
 
 
