--- a/e-mail.html
+++ b/e-mail.html
@@ -20,26 +20,19 @@
             font-size: 14px;
         }
         #trapezoid {
-            border-right: 600px solid #707070;
+            border-right: 600px solid #562668;
             border-bottom: 2vw solid transparent;
             width: 0;
             height: 200px;
             margin-top: -20px;
         }
         #trapezoid2{
-            border-right: 600px solid #707070;
+            border-right: 600px solid #562668;
             border-top: 2vw solid transparent;
             width: 0;
             height: 200px;
         }
-        .footer{
-            position: absolute;
-            bottom: 0;
-            align-content: center;
-            align-items: center;
-            text-align: center;
-            left: 21%;
-        }
+
     </style>
     <!-- CSS : END -->
 </head>
@@ -81,7 +74,7 @@
                                                 <table border="0" cellpadding="0" cellspacing="0" width="100%">
                                                     <tr>
                                                         <td style="border: 1px solid gainsboro">
-                                                            <img src="images/left.gif" alt="" width="100%" height="140" style="display: block;"/>
+                                                            <img src="#" alt="" width="100%" height="140" style="display: block;"/>
                                                         </td>
                                                     </tr>
                                                     <tr>
@@ -100,7 +93,7 @@
                                                                     </td>
                                                                 </tr>
                                                                 <tr>
-                                                                    <td style="padding-bottom: 5px; font-weight: bold">
+                                                                    <td style="padding-bottom: 5px; font-weight: bold; color: #562668">
                                                                         Por: R$19,99
                                                                     </td>
                                                                 </tr>
@@ -111,7 +104,7 @@
                                                                 </tr>
                                                                 <tr>
                                                                     <td style="padding-bottom: 5px">
-                                                                        <button type="button" href="#" style="text-align: center; text-decoration: none; border: 1px solid #707070; border-radius: 4px; padding: 7px 25%; color: #888888; background: white; margin-top: 10px;  width: 100%; cursor: pointer;">
+                                                                        <button type="button" href="#" style="text-align: center; text-decoration: none; border: 1px solid #FF891F; border-radius: 4px; padding: 7px 25%; color: #EFECEC; background: #FF891F; margin-top: 10px;  width: 100%; cursor: pointer;">
                                                                             Comprar
                                                                         </button>
                                                                     </td>
@@ -147,7 +140,7 @@
                                                                     </td>
                                                                 </tr>
                                                                 <tr>
-                                                                    <td style="padding-bottom: 5px; font-weight: bold">
+                                                                    <td style="padding-bottom: 5px; font-weight: bold; color: #562668">
                                                                         Por: R$19,99
                                                                     </td>
                                                                 </tr>
@@ -158,7 +151,7 @@
                                                                 </tr>
                                                                 <tr>
                                                                     <td style="padding-bottom: 5px">
-                                                                        <button type="button" href="#" style="text-align: center; text-decoration: none; border: 1px solid #707070; border-radius: 4px; padding: 7px 25%; color: #888888; background: white; margin-top: 10px;  width: 100%; cursor: pointer;">
+                                                                        <button type="button" href="#" style="text-align: center; text-decoration: none; border: 1px solid #FF891F; border-radius: 4px; padding: 7px 25%; color: #EFECEC; background: #FF891F; margin-top: 10px;  width: 100%; cursor: pointer;">
                                                                             Comprar
                                                                         </button>
                                                                     </td>
@@ -177,7 +170,7 @@
                 </tr>
                 <tr style="text-align: center">
                     <td style="padding: 20px 0 30px 0;">
-                        <button type="button" href="#" style="text-align: center; text-decoration: none; border: 1px solid #707070; border-radius: 4px; padding: 7px 20%; color: #888888; background: white; margin-top: 10px; cursor: pointer;">
+                        <button type="button" href="#" style="text-align: center; text-decoration: none; border: 1px solid #FF891F; border-radius: 4px; padding: 7px 20%; color: #EFECEC; background: #FF891F; margin-top: 10px; cursor: pointer;">
                             Tem muito mais aqui. Vem ver!
                         </button>
                     </td>
